# CyberEther

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  ACKNOWLEDGMENTS.md  AI.md  CONTRIBUTING.md  CONTRIBUTION_README.md  DATA_MANIPULATION_BLOCKS.md  DIMENSION_AND_IO_BLOCKS.md  Dockerfile  FFT_AXIS_SELECTION.md  INSTALL.md  LICENSE  PULL_REQUEST.md  README.md  TENSOR_MANIPULATION_BLOCKS.md  ci.yml  cyberether.html  fm_simple.yml  main.cc  meson.build  meson_options.txt  multi-device.yml  pyproject.toml  runtime.cc  spectrum_analyzer.yml  test.cc  test_new.cc
apps/macos/: Info.plist.in  README.md  create-app.sh  create-dmg.sh  meson.build  package.sh  sign-notarize-app.sh  sign-notarize-dmg.sh
examples/: README.md  custom_interface.cc  hello_world.cc  interface.cc  meson.build
examples/flowgraphs/: flight-tracker.yml  multi-fm.yml  offline-frbnn.yml  overlap-add-fold.yml  overlap-add.yml  parser.py  remote-spectrum-analyzer.yml  signal-generator.yml  simple-fm.yml  spectrum-analyzer.yml
examples/jetstream/: hello_world.cc  meson.build
examples/plugins/: meson.build
examples/plugins/blueprint/: README.md  meson.build
examples/superluminal/: meson.build
examples/superluminal/constellation/: constellation.cc  constellation.py  meson.build
examples/superluminal/hello_world/: hello_world.cc  hello_world.py  meson.build
examples/superluminal/interface/: interface.cc  interface.py  meson.build
examples/superluminal/interferometer/: interferometer.py
examples/superluminal/realtime/: meson.build  realtime.cc  realtime.py
examples/superluminal/remote/: meson.build  remote.cc  remote.py
flowgraphs/: ffff.yml  fm.yml  fm_simple.yml  fm_simpler.yml  fm_simplerr.yml  meson.build  multi-device.yml  multi-fm.yml  overlap-add-fold.yml  overlap-add.yml  parser.py  remote-instance.yml  remote-spectrum-analyzer.yml  simple-fm.yml  spectrum-analyzer.yml  spectrum.yml  spectrum_analyzer.yml  speech-recognition-fm.yml
meson/loaders/: meson.build
meson/loaders/audiotoolbox/: meson.build
meson/loaders/cpphttplib/: meson.build
meson/loaders/cuda/: meson.build
meson/loaders/fmt/: meson.build
meson/loaders/ftxui/: meson.build
meson/loaders/glfw/: meson.build
meson/loaders/glm/: meson.build
meson/vulkan/: meson.build
python/: meson.build
python/superluminal/: __init__.py  meson.build  superluminal.cc
resources/: cyberether.html  gstreamer.md  meson.build  parser.py  patch_fmtlib.sh
resources/flowgraphs/: meson.build  parser.py
resources/fonts/: compressed_inter.hh  compressed_jbmm.hh  compressed_sg.hh
resources/geodata/: meson.build  parser.py
resources/images/: meson.build
resources/shaders/: meson.build  parser.py
resources/web/: local_server.py
shaders/: meson.build  parser.py
shaders/constellation/: meson.build  signal.vert.glsl
shaders/global/: meson.build  text.frag.glsl  text.vert.glsl  thicklines.comp  thicklinestrip.comp
shaders/lineplot/: cursor.frag.glsl  cursor.vert.glsl  grid.frag.glsl  grid.vert.glsl  meson.build  signal.frag.glsl  signal.vert.glsl
shaders/remote/: framebuffer.frag.glsl  meson.build
shaders/spectrogram/: meson.build  signal.frag.glsl
shaders/waterfall/: meson.build
src/: app.cc  app_browser.cc  app_native.cc  benchmark.cc  block.cc  block_context.cc  block_impl.cc  block_interface.cc  compositor.cc  compositor_impl.cc  compositor_impl_default.cc  flowgraph.cc  flowgraph_environment.cc  flowgraph_metadata.cc  flowgraph_view.cc  instance.cc  instance_remote.cc  instance_remote_impl.cc  instance_remote_impl.hh  instance_remote_socket.cc  instance_remote_stub.cc  instance_remote_supervisor.cc  instance_remote_ui.cc  logger.cc  meson.build  module.cc  module_context.cc  module_impl.cc  module_interface.cc  module_surface.cc  parser.cc  parser_decode.cc  parser_encode.cc  parser_map.cc  parser_yaml.cc  plugin.cc  registry.cc  run_browser.cc  run_native.cc  runtime.cc  (+11 more)
src/compositor/: base.cc  imgui.cc  imnodes.cc  markdown.cc  meson.build  stb_image.cc
src/compute/: scheduler.cc
src/domains/: meson.build
src/domains/dsp/: meson.build
src/flowgraph/: base.cc  flowgraph.cc  helpers.cc  meson.build  rapidyaml.cc  rapidyaml.hh  yaml.cc  yaml.hh
src/memory/: buffer.cc  buffer_backend.hh  buffer_cpu.cc  buffer_cuda.cc  buffer_metal.cc  buffer_vulkan.cc  meson.build  metadata.cc  prototype.cc  tensor.cc  token.cc  types.cc
src/memory2/: buffer.cc  buffer_backend.hh  buffer_cpu.cc  buffer_metal.cc  meson.build  tensor.cc  token.cc
src/modules/: meson.build
src/parser/: meson.build  parser.cc  yaml.cc
src/platform/: apple.hh  apple.mm  base.cc  dialogs.cc  dynamic_library.cc  file_lock.cc  meson.build  paths.cc  process.cc  terminal.cc  url.cc
src/render/: buffer.cc  kernel.cc  meson.build  surface.cc  texture.cc  transfer.cc  window.cc
src/runtime/: helpers.hh  meson.build  runtime.cc
src/store/: base.cc  meson.build
src/superluminal/: base.cc  dmi_block.hh  dmi_block_impl.cc  dmi_module.cc  dmi_module.hh  dmi_module_impl.cc  dmi_module_impl.hh  dmi_module_impl_native_cpu.cc  meson.build
src/tools/: circular_buffer.cc  meson.build  nanobench.cc  stb_image.cc
src/viewport/: generic.cc  meson.build
subprojects/gadget/: meson.build
subprojects/jetstream/: .gitignore  meson.build  meson_options.txt
subprojects/render/: meson.build  meson_options.txt
subprojects/spectrum/: meson.build  meson_options.txt
tests/: memory.cc  meson.build
tests/cli/: main.cc  meson.build
tests/common/: flowgraph_fixture.hh  onnx_model_helpers.hh
tests/components/: common.hh  meson.build  shapes.cc  shapes_advanced.cc  text.cc  text_advanced.cc
tests/flowgraph/: api.cc  common.hh  flowgraph.cc  meson.build
tests/memory/: axis.cc  buffer.cc  meson.build  snapshot.cc  storage.cc  tensor.cc  token.cc  types.cc
tests/modules/: main.cc  meson.build  runtime_python.cc  runtime_skip.cc
tests/parser/: common.hh  conversions.cc  hash.cc  meson.build  serdes.cc  yaml.cc
tests/platform/: main.cc  meson.build  paths.cc
tests/render/: meson.build  transfers.cc
tests/settings/: meson.build  settings.cc
(+2415 files in other folders)
