option('native', type : 'boolean', value : false, description: 'Enable native build.')
option('python', type : 'boolean', value : false, description: 'Enable Superluminal Python bindings.')
option('wheel', type : 'boolean', value : false, description: 'Enable Python wheel packaging mode.')
option('tests', type : 'boolean', value : true, description: 'Enable tests.')
option('examples', type : 'boolean', value : true, description: 'Enable examples.')
option('remote', type : 'feature', value : 'auto', description: 'Enable remote streaming with bundled static GStreamer.')
option('inference', type : 'feature', value : 'auto', description: 'Enable ONNX Runtime inference (Infer block in the ML domain).')
option('fbh_reader', type : 'feature', value : 'auto', description: 'Enable FBH5 reader (HDF5 beamformer filterbank files).')
