ldr_lst = {}

subdir('cuda')
subdir('metal')
subdir('zlib')
subdir('glfw')
subdir('soapy')
subdir('vulkan')
subdir('webgpu')
subdir('audiotoolbox')
subdir('openssl')
subdir('gstreamer')
subdir('glm')
subdir('objcpp')
subdir('nanobench')
subdir('fmt')
subdir('stb')
subdir('cpphttplib')
subdir('json')
subdir('rapidyaml')
subdir('qrencode')
subdir('libmodes')
subdir('onnxruntime')
# [NEW DEPENDENCY HOOK]

summary(ldr_lst, section: 'Loaders', bool_yn: true)
